Sed 3.62 (aligned with GNU sed CVS at 2005-02-10)
  
* added a note to BUGS and the manual about changed interpretation
  of `s|abc\|def||', and about localization issues.

* fixed --disable-nls build problems on Solaris.

* fixed `make check' in non-English locales.
  
* output the result of commands a, r, R when a q command is found.

-----------------------------------------------------------------------
Sed 3.61a

* sed 3.61 had GNU sed 4.1's toplevel Makefile by mistake.  Fixed.

-----------------------------------------------------------------------
Sed 3.61 (aligned with GNU sed 4.1)

* 0 address behaves correctly in single-file (-i and -s) mode.

* // matches the last regular expression even in POSIXLY_CORRECT mode.

* added parameter to `v' for the version of sed that is expected.
  Also, `v' disables POSIXLY_CORRECT behavior.

* change the way we treat lines which are not terminated by a newline.
  Such lines are printed without the terminating newline (as before)
  but as soon as more text is sent to the same output stream, the
  missing newline is printed, so that the two lines don't concatenate.
  The behavior is now independent from POSIXLY_CORRECT because POSIX
  actually has undefined behavior in this case, and the new implementation
  arguably gives the ``least expected surprise''.  Thanks to Stepan
  Kasal for discussing the issue and providing the implementation.

* documentation improvements, with updated references to the POSIX.2
  specification

* error messages on I/O errors are better, and -i does not leave temporary
  files around (e.g. when running ``sed -i'' on a directory).

* escapes are accepted in the y command (for example: y/o/\n/ transforms
  o's into newlines)

* fix for -i under Cygwin; also, the -i option tries to set the owner
  and group to the same as the input file

* improvements to some error messages (e.g. y/abc/defg/ incorrectly said
  `excess characters after command' instead of `y arguments have
  different lengths')
